# flowstate

./: Cargo.toml  Flow.yaml  README.md  ROADMAP.md
.github/workflows/: rust.yml
src/: error.rs  lib.rs  main.rs
src/config/: host.rs  load.rs  mod.rs  model.rs
src/model/: host.rs
src/services/: monitor.rs
tests/: integration_test.rs  test_config.yaml
