[package]
name = "flowstate"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.29"
regex = "1.12.2"
reqwest = { version = "0.12.28", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
tempfile = "3.8"
wiremock = "0.6"
